--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -151,9 +151,26 @@
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
+  padding-left: $spacing-lg;
+  border-left: 2px solid $border-medium;
+  align-self: stretch;
+  justify-content: center;
+
+  &:first-child {
+    padding-left: $spacing-lg;
+  }
 
   @include md {
     width: 100%;
+    border-left: none;
+    padding-left: 0;
+    padding-bottom: $spacing-md;
+    border-bottom: 1px solid $border-medium;
+
+    &:last-child {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
   }
 
   label {
