--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -21,6 +21,7 @@ $text-white: #ffffff;
 $text-light: #f0f0f0;
 $text-muted: #e0e0e0;
 $text-gray: #b0b0b0;
+$text-dark: #2c3e50;
 
 // Cores de Borda
 $border-light: rgba(255, 255, 255, 0.1);
