--- a/src/styles/components/_legend.scss
+++ b/src/styles/components/_legend.scss
@@ -16,11 +16,13 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   display: flex;
   align-items: center;
+  justify-content: center;
 
   @include md {
     padding: $spacing-sm $spacing-md;
     order: 3;
     width: 100%;
+    border-radius: $radius-md;
     height: auto !important;
   }
 }
