--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -70,6 +70,7 @@ $z-legend: 999;
 $z-info-toggle: 999;
 $z-info-panel: 1000;
 $z-header: 1001;
+$z-loading: 1002;
 
 // Dimensões
 $header-padding: 0.875rem 1.25rem;
