--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,4 @@
 @import 'components/legend';
 @import 'components/info-panel';
 @import 'components/stats-panel';
+@import 'components/loading-indicator';
