--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -2,6 +2,9 @@
 // MIXINS
 // =================================
 
+@use 'variables' as *;
+@use 'colors' as *;
+
 // Flexbox Center
 @mixin flex-center {
   display: flex;
