--- a/src/styles/components/_radius-control.scss
+++ b/src/styles/components/_radius-control.scss
@@ -2,10 +2,10 @@
 // COMPONENTE: RADIUS CONTROL (SLIDER)
 // =================================
 
-@import '../abstracts/colors';
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
-@import '../abstracts/breakpoints';
+@use '../abstracts/colors' as *;
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+@use '../abstracts/breakpoints' as *;
 
 .radius-control {
   input[type="range"] {
