--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,10 +2,10 @@
 // COMPONENTE: FLOATING HEADER
 // =================================
 
-@import '../abstracts/colors';
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
-@import '../abstracts/breakpoints';
+@use '../abstracts/colors' as *;
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+@use '../abstracts/breakpoints' as *;
 
 .floating-header {
   position: absolute;
