--- a/src/styles/components/_loading-indicator.scss
+++ b/src/styles/components/_loading-indicator.scss
@@ -2,10 +2,10 @@
 // COMPONENTE: LOADING INDICATOR
 // =================================
 
-@import '../abstracts/colors';
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
-@import '../abstracts/breakpoints';
+@use '../abstracts/colors' as *;
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+@use '../abstracts/breakpoints' as *;
 
 .loading-indicator {
   position: fixed;
