--- a/src/styles/components/_stats-group.scss
+++ b/src/styles/components/_stats-group.scss
@@ -2,10 +2,10 @@
 // COMPONENTE: STATS GROUP
 // =================================
 
-@import '../abstracts/colors';
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
-@import '../abstracts/breakpoints';
+@use '../abstracts/colors' as *;
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+@use '../abstracts/breakpoints' as *;
 
 .stats-group {
   display: flex;
