--- a/src/styles/components/_weather-map.scss
+++ b/src/styles/components/_weather-map.scss
@@ -2,10 +2,10 @@
 // COMPONENTE: WEATHER MAP CONTAINER
 // =================================
 
-@import '../abstracts/colors';
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
-@import '../abstracts/breakpoints';
+@use '../abstracts/colors' as *;
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+@use '../abstracts/breakpoints' as *;
 
 .weather-map-container {
   width: 100%;
