--- a/src/styles/examples/_usage-examples.scss
+++ b/src/styles/examples/_usage-examples.scss
@@ -5,10 +5,10 @@
 // Este é um arquivo de exemplo mostrando como usar
 // as variáveis, mixins e padrões do projeto
 
-@import '../abstracts/colors';
-@import '../abstracts/variables';
-@import '../abstracts/mixins';
-@import '../abstracts/breakpoints';
+@use '../abstracts/colors' as *;
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+@use '../abstracts/breakpoints' as *;
 
 // ===== EXEMPLO 1: Card com glassmorphism =====
 .exemplo-card {
