add finding cities

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -70,7 +70,8 @@ $z-legend: 999;
 $z-info-toggle: 999;
 $z-info-panel: 1000;
 $z-header: 1001;
-$z-loading: 1002;
+$z-dropdown: 1002;
+$z-loading: 1003;
 
 // Dimensões
 $header-padding: 0.875rem 1.25rem;
