add WeatherAlerts component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,3 +23,4 @@
 @use 'components/info-panel';
 @use 'components/stats-panel';
 @use 'components/loading-indicator';
+@use 'components/weather-alerts';
