--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @use 'components/header';
 @use 'components/radius-control';
 @use 'components/datetime-control';
+@use 'components/day-carousel';
 @use 'components/hamburger';
 @use 'components/bottom-container';
 @use 'components/stats-group';
