--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,3 +25,4 @@
 @use 'components/stats-panel';
 @use 'components/loading-indicator';
 @use 'components/weather-alerts';
+@use 'components/alert-detail-panel';
